[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "noaa-gfs-wave"
version = "0.1.2"
description = "Read NOAA GFS WaveWatch III forecast data from NOMADS."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Felipe Benevides", email = "me@benevides.pro" }]
requires-python = ">=3.11"
keywords = ["noaa", "gfs", "ww3", "wavewatch", "surf", "forecast", "grib", "nomads"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Typing :: Typed",
]
dependencies = [
    "xarray==2026.4.0",
    "cfgrib==0.9.15.1",
    "numpy==2.4.4",
    "requests==2.33.1",
    "pydantic==2.13.2",
]

[project.optional-dependencies]
test = ["pytest==9.0.3", "pytest-cov==7.1.0", "responses==0.26.0"]
dev = ["ruff==0.15.11", "build==1.4.3", "twine==6.2.0"]

[project.urls]
Repository = "https://github.com/fbenevides/noaa-gfs-wave"
Changelog = "https://github.com/fbenevides/noaa-gfs-wave/blob/main/CHANGELOG.md"
Issues = "https://github.com/fbenevides/noaa-gfs-wave/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/noaa_gfs_wave"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=noaa_gfs_wave --cov-report=term-missing"

[tool.coverage.run]
source = ["src/noaa_gfs_wave"]

[tool.coverage.report]
fail_under = 90
